// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"import test from \\"./Component\\";
var NewStuff = /** @class */ (function () {
    function NewStuff() {
        // eslint-disable-next-line no-console
        console.log(\\"init class\\");
    }
    NewStuff.prototype.method = function () {
        // eslint-disable-next-line no-console
        console.log(test(2, 4));
        import(\\"./SomeLibrary\\").then(function (SomeLibrary) {
            var som = new SomeLibrary.default();
            // eslint-disable-next-line no-console
            console.log(som.add(2, 4));
        });
    };
    return NewStuff;
}());
export default NewStuff;

//# sourceMappingURL=script.js.map
"
`;

exports[`Compiles TypeScript 3`] = `
"export default function test(a, b) {
    return a + b;
}

//# sourceMappingURL=Component.js.map
"
`;

exports[`Compiles TypeScript and concatenates 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/concatenates/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript and concatenates 2`] = `
"export default function test(a, b) {
    return a + b;
}

var SomeLibrary = /** @class */ (function () {
    function SomeLibrary() {
    }
    SomeLibrary.prototype.add = function (a, b) {
        return a + b;
    };
    SomeLibrary.prototype.substract = function (a, b) {
        return a - b;
    };
    SomeLibrary.prototype.divide = function (a, b) {
        return a / b;
    };
    return SomeLibrary;
}());
export default SomeLibrary;

import test from \\"./Component\\";
var NewStuff = /** @class */ (function () {
    function NewStuff() {
        // eslint-disable-next-line no-console
        console.log(\\"init class\\");
    }
    NewStuff.prototype.method = function () {
        // eslint-disable-next-line no-console
        console.log(test(2, 4));
        import(\\"./SomeLibrary\\").then(function (SomeLibrary) {
            var som = new SomeLibrary.default();
            // eslint-disable-next-line no-console
            console.log(som.add(2, 4));
        });
    };
    return NewStuff;
}());
export default NewStuff;

//# sourceMappingURL=myBundle.min.js.map
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] ESLint failed with 1 error
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
Error: TypeScript: Compilation failed
    ...stacktrace...
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__]
__PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/fails/js/SomeLibrary.ts
  10:1  error  Parsing error: Unexpected token

   8 |         return a - b;
   9 | }
> 10 |
     | ^

✖ 1 problem (1 error, 0 warnings)

js/SomeLibrary.ts(10,1): error TS1005: '}' expected.
TypeScript: 1 syntax error
TypeScript: emit succeeded (with errors)
",
}
`;

exports[`Lints TypeScript 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] ESLint failed with 10 errors
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__]
__PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  2:1  error  Prefer default export                                               @swissquote/swissquote/import/prefer-default-export
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-typescript-gulp/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·(SomeLibrary)·=>⏎···\` with \`SomeLibrary·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 13 problems (10 errors, 3 warnings)
  9 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;
